# python-cffi-demo

./: .gitignore  README.md
abi-inline/: Untitled-1.ipynb
abi-outofline/: MANIFEST.in  README.md  cleanup.bat  cleanup.ps1  cleanup.py  cli_wrapper.py  pyproject.toml  setup.py  setup_demo.py  setup_demo_simple.py  simple_example_build.py  test_example.py  usage_example.py
api-c-sources/: README.md  _pi.c  cleanup.bat  demo.py  pi.c  pi_extension_build.py  test_pi.py  usage_example.py
api-c-standard-library/: README.md  clean_demo.py  cleanup.bat  cleanup.ps1  cleanup.py  comprehensive_demo.py  example_build.py  minimal_example.py  setup.py  simple_demo.py  test_example.py
api-outofline/: README.md  cleanup.bat  cleanup.ps1  cleanup.py  example.py  example_build.py  test_example.py
main-mode/: .gitignore  CMakeLists.txt  README.md  README_CMAKE.md  README_DLL.md  build_dll.bat  cleanup.bat  cleanup.ps1  cleanup_all.bat  cleanup_dll.bat  piapprox_build.py  piapprox_build_dll.py  setup.py  test.py  test_dll.py
main-mode/include/: pi_dll.h
main-mode/lib/: pi_dll.c
main-mode/python/: piapprox_build.py  piapprox_build_dll.py  test.py  test_dll.py
main-mode/scripts/: build.bat  build.sh  build_static.bat  clean.bat
main-mode/src/: pi.c  pi_dll.c
